force-app/main/default/objects/Activity/fields/Estimated_Hours_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Hours_to_Complete__c</fullName>
    <label>Estimated Work Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>