force-app/main/default/objects/Activity/fields/Start_Date_Time_Readable__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time_Readable__c</fullName>
    <label>Start Date Time Readable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>