force-app/main/default/objects/Activity/fields/Total_Minutes_Worked__c.field-meta.xml
<CustomField>
    <fullName>Total_Minutes_Worked__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total time in minutes spent working on a task</description>
    <inlineHelpText>Total time in minutes spent working on a task</inlineHelpText>
    <label>Total Minutes Worked</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>