force-app/main/default/objects/Activity/fields/Work_Ended_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Work_Ended_Date_Time__c</fullName>
    <description>When the task last exited the working status</description>
    <inlineHelpText>When the task last exited the working status</inlineHelpText>
    <label>Work Ended Date Time</label>
    <type>DateTime</type>
</CustomField>