force-app/main/default/objects/Activity/fields/Work_Started_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Work_Started_Date_Time__c</fullName>
    <description>The last time a task entered the working state</description>
    <inlineHelpText>The last time a task entered the working state</inlineHelpText>
    <label>Work Started Date Time</label>
    <type>DateTime</type>
</CustomField>